--- a/helm/exporter-kubernetes/templates/configmap.yaml
+++ b/helm/exporter-kubernetes/templates/configmap.yaml
@@ -1,5 +1,5 @@
-apiVersion: v1
-kind: ConfigMap
+apiVersion: monitoring.coreos.com/v1
+kind: PrometheusRule
 metadata:
   labels:
     app: "prometheus"
@@ -8,18 +8,16 @@ metadata:
     prometheus: {{ .Release.Name }}
     release: {{ .Release.Name }}
     role: alert-rules
-    {{- if .Values.additionalRulesConfigMapLabels }}
-{{ toYaml .Values.additionalRulesConfigMapLabels | indent 4 }}
+    {{- if .Values.additionalRulesLabels }}
+{{ toYaml .Values.additionalRulesLabels | indent 4 }}
+    {{- else if .Values.additionalRulesConfigMapLabels }}       # Deprecated for .Values.additionalRulesLabels
+{{ toYaml .Values.additionalRulesConfigMapLabels | indent 4 }}  # Deprecated for .Values.additionalRulesLabels
     {{- end }}
   name: {{ template "exporter-kubernetes.fullname" . }}
-data:
+spec:
 {{- if .Values.prometheusRules }}
-{{- $root := . }}
-{{- range $key, $val := .Values.prometheusRules }}
-  {{ $key }}: |-
-{{ $val | indent 4}}
-{{- end }}
+  groups:
+{{ toYaml .Values.prometheusRules | indent 4 }}
 {{ else }}
-  kubernetes.rules: |-
-    {{- include "kubernetes.rules.yaml.tpl" . | indent 4}}
+{{ include "kubernetes.rules.yaml.tpl" . | indent 2}}
 {{ end }}
