--- a/helm/exporter-node/values.yaml
+++ b/helm/exporter-node/values.yaml
@@ -62,9 +62,9 @@ global:
 ## Custom Labels to be added to ServiceMonitor
 ##
 additionalServiceMonitorLabels: {}
-##Custom Labels to be added to Prometheus Rules ConfigMap
+##Custom Labels to be added to Prometheus Rules CRD
 ##
-additionalRulesConfigMapLabels: {}
+additionalRulesLabels: {}
 
 # deploy node_exporter as a DaemonSet
 enableDaemonSet: true
